fix overflow hidden bug on homepage

--- a/app/assets/stylesheets/acara-ui.scss
+++ b/app/assets/stylesheets/acara-ui.scss
@@ -135,7 +135,6 @@ hr {
 }
 
 .card {
-    overflow: hidden;
     background-color: var(--bg-t);
     border-color: var(--border);
     border-radius: 10px;
